<resources>
    <string name="app_name">E-Commerce</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="bag">Bag</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check">Check</string>
    <string name="banner">Banner</string>
    <string name="fashion_sale">Fashion Sale</string>
    <string name="new_text">New</string>
    <string name="view_all">View all</string>
    <string name="you_ve_never_seen_it_before">You\'ve never seen it before</string>
    <string name="sale_text">Sale</string>
    <string name="super_summer_sale">Super summer sale</string>
    <string name="summer_sale">Summer Sale</string>
    <string name="black">Black</string>
    <string name="men_s_hats">Men\'s hats</string>
    <string name="categories">Categories</string>
    <string name="women">Women</string>
    <string name="men">Men</string>
    <string name="kids">Kids</string>
    <string name="summer_sales">Summer Sales</string>
    <string name="up_to_50_off">Up to 50% off</string>
    <string name="view_all_items">view all items</string>
    <string name="choose_category">Choose Category</string>
</resources>