<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/home_icon"
        android:title="@string/home"/>
    <item
        android:id="@+id/shop"
        android:enabled="true"
        android:icon="@drawable/shop_icon"
        android:title="@string/shop"/>
    <item
        android:id="@+id/bag"
        android:enabled="true"
        android:icon="@drawable/bag_icon"
        android:title="@string/bag"/>
    <item
        android:id="@+id/favourite"
        android:enabled="true"
        android:icon="@drawable/favourite_icon"
        android:title="@string/favourites"/>
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile"/>
</menu>