<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.project.ecommerce.shopfragment.presentation.ShopFragmentViewModel" />
    </data>

    <FrameLayout
        android:id="@+id/shopFragmentFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".shopfragment.presentation.ShopFragment"
        android:background="@color/Background">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <include
                android:id="@+id/toolBar"
                layout="@layout/toolbar"/>
            <RadioGroup
                android:id="@+id/radioGroup"
                android:weightSum="3"
                app:layout_constraintTop_toBottomOf="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:checkedButton="@id/radioButtonWomen"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/radioButtonWomen"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/women"
                    android:textSize="16sp"
                    android:background="@drawable/shop_fragment_radio_button_bg"
                    android:button="@color/Transparent"
                    android:textColor="@color/white"/>
                <RadioButton
                    android:id="@+id/radioButtonMen"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/men"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:background="@drawable/shop_fragment_radio_button_bg"
                    android:button="@color/Transparent"
                    android:textColor="@color/white"/>
                <RadioButton
                    android:id="@+id/radioButtonKids"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/kids"
                    android:textSize="16sp"
                    android:background="@drawable/shop_fragment_radio_button_bg"
                    android:gravity="center"
                    android:button="@color/Transparent"
                    android:textColor="@color/white"/>
            </RadioGroup>
        <ScrollView
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/shop_top_banner"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/shop_fragment_top_banner_bg">
                    <TextView
                        android:id="@+id/summer_sale_text"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_marginTop="28dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/summer_sales"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="24sp"/>
                    <TextView
                        app:layout_constraintTop_toBottomOf="@+id/summer_sale_text"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/up_to_50_off"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="14sp"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/shopRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toBottomOf="@+id/shop_top_banner"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>