<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.project.ecommerce.homefragment.presentation.HomeFragmentViewModel" />
    </data>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/Background"
            android:paddingBottom="90dp">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".homefragment.presentation.HomeFragment">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/banner_section"
                        android:layout_width="match_parent"
                        android:layout_height="536dp"
                        app:layout_constraintTop_toTopOf="parent">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/home_fragment_top_banner"
                            android:scaleType="fitXY"
                            android:contentDescription="@string/banner" />
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/checkBtn"
                            android:layout_width="160dp"
                            android:layout_height="36dp"
                            android:text="@string/check"
                            android:textSize="14sp"
                            android:textColor="@color/white"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            android:layout_marginStart="10dp"
                            android:layout_marginBottom="32dp"
                            app:backgroundTint="@color/Primary"
                            android:background="@drawable/btn1_bg"/>
                        <TextView
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:text="@string/fashion_sale"
                            android:textColor="@color/white"
                            android:textSize="48sp"
                            android:fontFamily="@font/metropolis"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toTopOf="@id/checkBtn"
                            app:layout_constraintLeft_toLeftOf="parent"
                            android:layout_marginStart="15dp"
                            android:layout_marginBottom="18dp"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/new_recycler_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="22dp"
                        app:layout_constraintTop_toBottomOf="@+id/banner_section">
                        <TextView
                            android:id="@+id/new_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            android:layout_marginTop="33dp"
                            android:layout_marginStart="15dp"
                            android:text="@string/new_text"
                            android:fontFamily="@font/metropolis"
                            android:textStyle="bold"
                            android:textSize="34sp"
                            android:textColor="@color/white"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            android:layout_marginTop="52dp"
                            android:layout_marginEnd="15dp"
                            android:text="@string/view_all"
                            android:fontFamily="@font/metropolis"
                            android:textSize="12sp"
                            android:textColor="@color/white"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@+id/new_text"
                            app:layout_constraintLeft_toLeftOf="parent"
                            android:layout_marginTop="4dp"
                            android:layout_marginStart="15dp"
                            android:text="@string/you_ve_never_seen_it_before"
                            android:textFontWeight="200"
                            android:fontFamily="@font/metropolis"
                            android:textSize="10sp"
                            android:textColor="@color/Gray"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/newDataRecycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/new_recycler_header"/>
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/sale_recycler_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="22dp"
                        app:layout_constraintTop_toBottomOf="@+id/newDataRecycler">
                        <TextView
                            android:id="@+id/sale_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            android:layout_marginTop="33dp"
                            android:layout_marginStart="15dp"
                            android:text="@string/sale_text"
                            android:fontFamily="@font/metropolis"
                            android:textStyle="bold"
                            android:textSize="34sp"
                            android:textColor="@color/white"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            android:layout_marginTop="52dp"
                            android:layout_marginEnd="15dp"
                            android:text="@string/view_all"
                            android:fontFamily="@font/metropolis"
                            android:textSize="12sp"
                            android:textColor="@color/white"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@+id/sale_text"
                            app:layout_constraintLeft_toLeftOf="parent"
                            android:layout_marginTop="4dp"
                            android:layout_marginStart="15dp"
                            android:text="@string/super_summer_sale"
                            android:textFontWeight="200"
                            android:fontFamily="@font/metropolis"
                            android:textSize="10sp"
                            android:textColor="@color/Gray"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/saleDataRecycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/sale_recycler_header"/>
                    <ImageView
                        android:id="@+id/lower_banner"
                        android:layout_width="match_parent"
                        android:layout_height="366dp"
                        app:layout_constraintTop_toBottomOf="@+id/saleDataRecycler"
                        android:layout_marginTop="33dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/home_fragment_lower_banner1"/>
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/lower_left_side"
                        android:layout_width="match_parent"
                        android:layout_height="370dp"
                        app:layout_constraintTop_toBottomOf="@+id/lower_banner">
                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/summer_sale_layout"
                            android:layout_width="0dp"
                            android:layout_height="185dp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintRight_toLeftOf="@+id/lower_right_banner">
                            <TextView
                                android:id="@+id/lower_banner_left_top"
                                android:layout_width="150dp"
                                android:layout_height="wrap_content"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintLeft_toLeftOf="parent"
                                android:layout_marginLeft="15dp"
                                android:text="@string/summer_sale"
                                android:textSize="34sp"
                                android:textStyle="bold"
                                android:textColor="@color/Primary"/>
                        </androidx.constraintlayout.widget.ConstraintLayout>
                        <ImageView
                            android:id="@+id/lower_banner_left_bottom"
                            android:layout_width="0dp"
                            android:layout_height="185dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toLeftOf="@+id/lower_right_banner"
                            android:scaleType="fitXY"
                            android:src="@drawable/home_fragment_lower_banner3"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="@+id/lower_banner_left_bottom"
                            app:layout_constraintLeft_toLeftOf="parent"
                            android:layout_marginBottom="37dp"
                            android:layout_marginLeft="13dp"
                            android:text="@string/black"
                            android:textSize="34sp"
                            android:textColor="@color/white"/>
                        <ImageView
                            android:id="@+id/lower_right_banner"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintLeft_toRightOf="@+id/summer_sale_layout"
                            android:scaleType="fitXY"
                            android:src="@drawable/home_fragment_lower_banner2"/>
                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toTopOf="@+id/lower_left_side"
                            app:layout_constraintLeft_toLeftOf="@+id/lower_right_banner"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="60dp"
                            android:text="@string/men_s_hats"
                            android:textSize="34sp"
                            android:textColor="@color/white"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>
        </ScrollView>

</layout>